// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System should call system's emitplatform correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "526666653.3333 SNAX",
      },
    ],
  },
]
`;

exports[`System should undelegate snax.team resources correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "15599999220.0000 SNAX",
        "from": "snax.team",
        "net_weight": "2399999880.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "526666653.3333 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "526666653.3333 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3511111.0267 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "523155542.3066 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "533618653.1527 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "544453941.7661 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "555704196.8926 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 6`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "567418294.4380 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "579625694.1438 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 8`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "592357565.3306 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 9`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "605647662.0396 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 10`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "619532628.1729 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "634052308.8777 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 12`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "649250099.7155 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "665173341.2707 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 14`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "681873766.2916 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 15`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "699408007.4558 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 16`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "717838175.3676 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 17`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "737232518.1036 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 18`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "757666175.6665 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 19`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "779222045.2199 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 20`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "801991775.9725 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 21`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "826076916.3629 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 22`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "851590240.4318 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 23`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "878657286.0414 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 24`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "907418143.9448 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 25`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "938029545.2546 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 26`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "970667304.7488 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 27`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1005529190.3410 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 28`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1042838304.3706 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 29`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1082847082.3267 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 30`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1125842038.8830 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 31`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1172149422.2921 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 32`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1222141977.2219 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 33`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1276247066.0242 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 34`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1334956461.8088 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 35`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1398838208.3804 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 36`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1468551046.9720 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 37`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1544862045.9004 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 38`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1628668246.0749 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 39`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1721023367.1154 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 40`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1823170923.2210 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 41`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1936585500.6190 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 42`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2063024483.8218 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 43`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2204593233.5072 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 44`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2363827681.2526 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 45`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2543799607.9972 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 46`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2748251644.3175 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 47`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2981771455.5857 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 48`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3250017916.0988 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 49`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3560016708.3529 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 50`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3920549248.6254 SNAX",
      },
    ],
  },
]
`;

exports[`System should initialize system correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000847.2459 SNAX",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system 1`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 2`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "15999999200.0000 SNAX",
        "from": "snax.team",
        "net_weight": "3999999800.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "15599999220.0000 SNAX",
        "from": "snax.team",
        "net_weight": "2399999880.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system after initialization 2`] = `
Array [
  Array [
    Object {
      "amount": "20.0000 SNAX",
      "owner": "snax.team",
      "period_count": 10,
    },
  ],
]
`;
